--- a/views/index.erb
+++ b/views/index.erb
@@ -8,8 +8,16 @@
   </head>
   <body>
     <h1>Takeaway</h1>
-    <% @menu.dishes.each do |dish| %>
-      <li><%= dish[:name] %> £<%= '%.2f' % dish[:price] %></li>
-    <% end %>
+    <div class="container-fluid">
+      <div class="row">
+        <% @menu.dishes.each do |dish| %>
+          <div class="itemContainer col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+            <h3><%= dish[:name] %></h3>
+            <div>£<%= '%.2f' % dish[:price] %></div>
+            <button class="btn btn-primary">Add to cart</button>
+          </div>
+        <% end %>
+      </div>"
+    </div>
   </body>
 </html>
