--- a/views/index.erb
+++ b/views/index.erb
@@ -12,6 +12,7 @@
       <div class="row">
         <% @menu.dishes.each do |dish| %>
           <div class="itemContainer col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+            <img src="images/<%= dish[:name] %>.jpg">
             <h3><%= dish[:name] %></h3>
             <div>£<%= '%.2f' % dish[:price] %></div>
             <button class="btn btn-primary">Add to cart</button>
