--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -13,23 +13,25 @@ body {
 }
 
 img {
-  width: 20em;
+  width: 100%;
 }
 
 .itemName {
   position: absolute;
-  top: 0.1em;
+  top: -0.3em;
   right: 2em;
+  background-color: white;
 }
 
 .itemPrice {
   position: absolute;
-  top: 5.4em;
-  right: 15em;
+  top: 3em;
+  right: 3.5em;
+  background-color: white;
 }
 
 .buyButton {
   position: absolute;
   top: 5em;
-  right: 2em;
+  right: 3.5em;
 }
