--- a/views/index.erb
+++ b/views/index.erb
@@ -2,23 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheet.css">
     <title>Takeaway</title>
   </head>
   <body>
     <h1>Takeaway</h1>
-    <div class="container-fluid">
-      <div class="row">
-        <% @menu.dishes.each do |dish| %>
-          <div class="itemContainer col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-            <img src="images/<%= dish[:name] %>.jpg">
-            <h3 class="itemName"><%= dish[:name] %></h3>
-            <div class="itemPrice">£<%= '%.2f' % dish[:price] %></div>
-            <button class="buyButton btn btn-primary">Add to cart</button>
-          </div>
-        <% end %>
-      </div>"
-    </div>
+      <% @menu.dishes.each do |dish| %>
+        <h3><%= dish[:name] %></h3>
+        <div>£<%= '%.2f' % dish[:price] %></div>
+        <button onclick="">Add to cart</button>
+      <% end %>
   </body>
 </html>
